# ibis-crew-ai

./: .copier-answers.yml  .gitignore  Dockerfile  Makefile  README.md  _quarto.yml  justfile  objects.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci_cd.yml
_freeze/docs/data_product/execute-results/: html.json
app/: agent_engine_app.py  server.py
app/utils/: typing.py
deployment/cd/: deploy-to-prod.yaml  staging.yaml
deployment/ci/: pr_checks.yaml
deployment/terraform/: variables.tf
deployment/terraform/dev/: variables.tf
deployment/terraform/dev/vars/: env.tfvars
deployment/terraform/vars/: env.tfvars
docs/: _sidebar.yml  data_product.qmd
frontend/: streamlit_app.py
notebooks/: intro_agent_engine.ipynb
reference/: agent.qmd  index.qmd  server.qmd
src/conf/: config.py  parameters.toml
src/frontend/: side_bar.py  streamlit_app.py
src/frontend/style/: app_markdown.py
src/frontend/utils/: chat_utils.py  local_chat_history.py  message_editing.py  multimodal_utils.py  stream_handler.py  title_summary.py
src/ibis_crew_ai/: agent.py  server.py
src/ibis_crew_ai/crew/: crew.py
src/ibis_crew_ai/utils/: gcs.py  tracing.py  typing.py
tests/integration/: test_agent.py  test_server_e2e.py
tests/load_test/: load_test.py
tests/unit/: test_server.py
tests/unit/test_utils/: test_tracing_exporter.py
